sem4pi-23-24-2df1/LPROG/src/main/java/interviewModel/InterviewModelGrammarParser.java
package interviewModel;
// Generated from C:/sem4pi-23-24-2df1/LPROG/src/main/grammar/InterviewModelGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InterviewModelGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, TRUE=4, FALSE=5, WORD=6, SPACE=7, EOL=8, INTEGER=9, 
		DECIMAL=10, POINT=11, COMMA=12, TWO_POINTS=13, SEMICOLON=14, LEFT_PARENTHESIS=15, 
		RIGHT_PARENTHESIS=16, LEFT_BRACKET=17, RIGHT_BRACKET=18, QUESTION_MARK=19, 
		QUOTATION_MARKS=20, LEFT_SIGNAL=21, RIGHT_SIGNAL=22, BAR=23, SOLUTION=24, 
		OPTION=25, TRACO=26, SPECIAL_CHARS=27, D=28, M=29, Y=30, DATE=31, H=32, 
		MIN=33, TIME=34, TRUE_FALSE=35, SHORT_ANSWER=36, SINGLE_CHOICE=37, MULTIPLE_CHOICE=38, 
		INTEGER_QUESTION=39, DECIMAL_QUESTION=40, DATE_QUESTION=41, TIME_QUESTION=42, 
		NUMERIC_SCALE=43;
	public static final int
		RULE_start = 0, RULE_sentences = 1, RULE_sentence = 2, RULE_quotedTitle = 3, 
		RULE_questions = 4, RULE_question = 5, RULE_grade = 6, RULE_question_title = 7, 
		RULE_answer = 8, RULE_truefalse_question = 9, RULE_truefalse_answer = 10, 
		RULE_shortanswer_question = 11, RULE_shortanswer_answer = 12, RULE_singlechoice_question = 13, 
		RULE_multiplechoice_question = 14, RULE_optionz = 15, RULE_option = 16, 
		RULE_singlechoice_answer = 17, RULE_multiplechoice_answer = 18, RULE_integer_question = 19, 
		RULE_integer_answer = 20, RULE_decimal_question = 21, RULE_decimal_answer = 22, 
		RULE_date_question = 23, RULE_date_answer = 24, RULE_time_question = 25, 
		RULE_time_answer = 26, RULE_numericscale_question = 27, RULE_numericscale_answer = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "sentences", "sentence", "quotedTitle", "questions", "question", 
			"grade", "question_title", "answer", "truefalse_question", "truefalse_answer", 
			"shortanswer_question", "shortanswer_answer", "singlechoice_question", 
			"multiplechoice_question", "optionz", "option", "singlechoice_answer", 
			"multiplechoice_answer", "integer_question", "integer_answer", "decimal_question", 
			"decimal_answer", "date_question", "date_answer", "time_question", "time_answer", 
			"numericscale_question", "numericscale_answer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'INTERVIEW '", "'''", "'ANS:'", "'TRUE'", "'FALSE'", null, "' '", 
			null, null, null, "'.'", "','", "':'", "';'", "'('", "')'", "'['", "']'", 
			"'?'", "'\"'", "'<'", "'>'", "'|'", null, null, "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "TRUE", "FALSE", "WORD", "SPACE", "EOL", "INTEGER", 
			"DECIMAL", "POINT", "COMMA", "TWO_POINTS", "SEMICOLON", "LEFT_PARENTHESIS", 
			"RIGHT_PARENTHESIS", "LEFT_BRACKET", "RIGHT_BRACKET", "QUESTION_MARK", 
			"QUOTATION_MARKS", "LEFT_SIGNAL", "RIGHT_SIGNAL", "BAR", "SOLUTION", 
			"OPTION", "TRACO", "SPECIAL_CHARS", "D", "M", "Y", "DATE", "H", "MIN", 
			"TIME", "TRUE_FALSE", "SHORT_ANSWER", "SINGLE_CHOICE", "MULTIPLE_CHOICE", 
			"INTEGER_QUESTION", "DECIMAL_QUESTION", "DATE_QUESTION", "TIME_QUESTION", 
			"NUMERIC_SCALE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InterviewModelGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InterviewModelGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public QuotedTitleContext quotedTitle() {
			return getRuleContext(QuotedTitleContext.class,0);
		}
		public QuestionsContext questions() {
			return getRuleContext(QuestionsContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(InterviewModelGrammarParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(InterviewModelGrammarParser.EOL, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			quotedTitle();
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				match(EOL);
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			setState(65);
			questions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentencesContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(InterviewModelGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(InterviewModelGrammarParser.SPACE, i);
		}
		public List<TerminalNode> TRACO() { return getTokens(InterviewModelGrammarParser.TRACO); }
		public TerminalNode TRACO(int i) {
			return getToken(InterviewModelGrammarParser.TRACO, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(InterviewModelGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(InterviewModelGrammarParser.COMMA, i);
		}
		public List<TerminalNode> POINT() { return getTokens(InterviewModelGrammarParser.POINT); }
		public TerminalNode POINT(int i) {
			return getToken(InterviewModelGrammarParser.POINT, i);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterSentences(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitSentences(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitSentences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentences);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			sentence();
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SPACE:
					case POINT:
					case COMMA:
						{
						setState(69);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==POINT || _la==COMMA) {
							{
							setState(68);
							_la = _input.LA(1);
							if ( !(_la==POINT || _la==COMMA) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
						}

						setState(71);
						match(SPACE);
						}
						break;
					case TRACO:
						{
						setState(72);
						match(TRACO);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(75);
					sentence();
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(InterviewModelGrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(InterviewModelGrammarParser.WORD, i);
		}
		public List<TerminalNode> SPECIAL_CHARS() { return getTokens(InterviewModelGrammarParser.SPECIAL_CHARS); }
		public TerminalNode SPECIAL_CHARS(int i) {
			return getToken(InterviewModelGrammarParser.SPECIAL_CHARS, i);
		}
		public TerminalNode INTEGER() { return getToken(InterviewModelGrammarParser.INTEGER, 0); }
		public TerminalNode DECIMAL() { return getToken(InterviewModelGrammarParser.DECIMAL, 0); }
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(WORD);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPECIAL_CHARS) {
					{
					setState(82);
					match(SPECIAL_CHARS);
					}
				}

				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(85);
					match(T__1);
					setState(86);
					match(WORD);
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SPECIAL_CHARS) {
						{
						setState(87);
						match(SPECIAL_CHARS);
						}
					}

					}
				}

				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(INTEGER);
				}
				break;
			case DECIMAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(DECIMAL);
				}
				break;
			case SPECIAL_CHARS:
				enterOuterAlt(_localctx, 4);
				{
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(94);
					match(SPECIAL_CHARS);
					}
					}
					setState(97); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPECIAL_CHARS );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuotedTitleContext extends ParserRuleContext {
		public List<TerminalNode> QUOTATION_MARKS() { return getTokens(InterviewModelGrammarParser.QUOTATION_MARKS); }
		public TerminalNode QUOTATION_MARKS(int i) {
			return getToken(InterviewModelGrammarParser.QUOTATION_MARKS, i);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public QuotedTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotedTitle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuotedTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuotedTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuotedTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuotedTitleContext quotedTitle() throws RecognitionException {
		QuotedTitleContext _localctx = new QuotedTitleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_quotedTitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(QUOTATION_MARKS);
			setState(102);
			sentences();
			setState(103);
			match(QUOTATION_MARKS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionsContext extends ParserRuleContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionsContext questions() throws RecognitionException {
		QuestionsContext _localctx = new QuestionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_questions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			question();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public Truefalse_questionContext truefalse_question() {
			return getRuleContext(Truefalse_questionContext.class,0);
		}
		public Shortanswer_questionContext shortanswer_question() {
			return getRuleContext(Shortanswer_questionContext.class,0);
		}
		public Singlechoice_questionContext singlechoice_question() {
			return getRuleContext(Singlechoice_questionContext.class,0);
		}
		public Multiplechoice_questionContext multiplechoice_question() {
			return getRuleContext(Multiplechoice_questionContext.class,0);
		}
		public Integer_questionContext integer_question() {
			return getRuleContext(Integer_questionContext.class,0);
		}
		public Decimal_questionContext decimal_question() {
			return getRuleContext(Decimal_questionContext.class,0);
		}
		public Date_questionContext date_question() {
			return getRuleContext(Date_questionContext.class,0);
		}
		public Time_questionContext time_question() {
			return getRuleContext(Time_questionContext.class,0);
		}
		public Numericscale_questionContext numericscale_question() {
			return getRuleContext(Numericscale_questionContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_question);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE_FALSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				truefalse_question();
				}
				break;
			case SHORT_ANSWER:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				shortanswer_question();
				}
				break;
			case SINGLE_CHOICE:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				singlechoice_question();
				}
				break;
			case MULTIPLE_CHOICE:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				multiplechoice_question();
				}
				break;
			case INTEGER_QUESTION:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				integer_question();
				}
				break;
			case DECIMAL_QUESTION:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				decimal_question();
				}
				break;
			case DATE_QUESTION:
				enterOuterAlt(_localctx, 7);
				{
				setState(113);
				date_question();
				}
				break;
			case TIME_QUESTION:
				enterOuterAlt(_localctx, 8);
				{
				setState(114);
				time_question();
				}
				break;
			case NUMERIC_SCALE:
				enterOuterAlt(_localctx, 9);
				{
				setState(115);
				numericscale_question();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GradeContext extends ParserRuleContext {
		public TerminalNode DECIMAL() { return getToken(InterviewModelGrammarParser.DECIMAL, 0); }
		public TerminalNode INTEGER() { return getToken(InterviewModelGrammarParser.INTEGER, 0); }
		public GradeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterGrade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitGrade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitGrade(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GradeContext grade() throws RecognitionException {
		GradeContext _localctx = new GradeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_grade);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==DECIMAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_titleContext extends ParserRuleContext {
		public List<TerminalNode> QUOTATION_MARKS() { return getTokens(InterviewModelGrammarParser.QUOTATION_MARKS); }
		public TerminalNode QUOTATION_MARKS(int i) {
			return getToken(InterviewModelGrammarParser.QUOTATION_MARKS, i);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(InterviewModelGrammarParser.SPACE, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(InterviewModelGrammarParser.LEFT_BRACKET, 0); }
		public GradeContext grade() {
			return getRuleContext(GradeContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(InterviewModelGrammarParser.RIGHT_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(InterviewModelGrammarParser.SEMICOLON, 0); }
		public TerminalNode QUESTION_MARK() { return getToken(InterviewModelGrammarParser.QUESTION_MARK, 0); }
		public TerminalNode POINT() { return getToken(InterviewModelGrammarParser.POINT, 0); }
		public Question_titleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestion_title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestion_title(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestion_title(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_titleContext question_title() throws RecognitionException {
		Question_titleContext _localctx = new Question_titleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_question_title);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(QUOTATION_MARKS);
			setState(121);
			sentences();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT || _la==QUESTION_MARK) {
				{
				setState(122);
				_la = _input.LA(1);
				if ( !(_la==POINT || _la==QUESTION_MARK) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(125);
			match(QUOTATION_MARKS);
			setState(126);
			match(SPACE);
			setState(127);
			match(LEFT_BRACKET);
			setState(128);
			grade();
			setState(129);
			match(RIGHT_BRACKET);
			setState(130);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerContext extends ParserRuleContext {
		public TerminalNode SPACE() { return getToken(InterviewModelGrammarParser.SPACE, 0); }
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public AnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitAnswer(this);
			else return visitor.visitChildren(this);
		}
	}
